--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 DB_HOST=localhost
 DB_PORT=5432
 DB_USER=eff
-DB_PASSWORD=effeModel123
-DB_NAME=music_library
-DATABASE_URL=postgres://eff:effeModel123@localhost:5432/music_library
+DB_PASSWORD=effmod123
+DB_NAME=musicdb
+DATABASE_URL=postgres://eff:effmod123@localhost:5432/musicdb
 
 SERVER_PORT=8080
 SERVER_MOCK_SERVER_PORT=8088
